plugins {
    id 'com.android.application'
}

android {
    namespace "com.aexon"
    compileSdk 36
    buildToolsVersion "36.0.0"

    defaultConfig {
        applicationId "com.aexon"
        minSdk 26
        targetSdk 36
        versionCode 1019
        versionName "1.5"
    }

    signingConfigs {
        sign {
            storeFile file('key.jks')
            keyAlias 'myKey'
            storePassword 'novzzmanager'
            keyPassword 'novzzmanager'
        }
    }
    buildTypes {
        debug {
            minifyEnabled false
            shrinkResources false
            applicationIdSuffix ".debug"
            debuggable true
        }
        release {
            signingConfig signingConfigs.sign
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), rootProject.file('proguard-rules.pro')
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

}

dependencies {
    implementation 'dev.rikka.shizuku:api:13.0.0'
    implementation 'dev.rikka.shizuku:provider:13.0.0'

    implementation 'androidx.annotation:annotation:1.10.0'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << "-Xlint:-deprecation"
}